# nightstand_audio

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  media_library.py  media_metadata.py  models.py  state_store.py
app/display/: __init__.py  base.py  epaper_display_stub.py  gpio_safety.py  renderer.py  simulator_display.py  waveshare_display.py
app/hardware/: __init__.py  pin_map.py
app/input/: __init__.py  base.py  bluetooth_media_input_stub.py  composite_input.py  gpio_input_stub.py  keyboard_input.py
app/playback/: __init__.py  base.py  factory.py  mock_player.py  mpd_player.py  mpv_player.py
app/services/: alarm.py  audio.py  bluetooth.py  controller.py  logger.py  navigation.py  startup.py  (+1 more)
docs/: pi-bringup.md
scripts/: __init__.py  clear_epd.py  diagnose_gpio.py  download_bible_in_year.py  import_gpodder_to_button2.py  inspect_epd_driver.py  log_snapshot.py  play_file_test.py  push_latest_epd.py  rebuild_media_index.py  render_display_previews.py  render_once.py  run_live_epd.py  run_pi_appliance.py  run_simulator.py  seed_library.py  tail_logs.sh  test_audio_output.py  watch_screen.py
tests/: __init__.py  test_alarm.py  test_ambient_mode.py  test_audio_output.py  test_bluetooth.py  test_composite_input.py  test_epd_refresh_policy.py  test_gpio_input.py  test_gpio_safety.py  test_media_library.py  test_media_metadata.py  test_mpv_player.py  test_navigation.py  test_night_mode.py  test_playback_factory.py  test_playback_streams.py  test_sleep_timer.py  test_state_store.py  test_waveshare_display_modes.py
(+2 files in other folders)
