[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nightstand-audio"
version = "0.1.0"
description = "Local-first Raspberry Pi nightstand audio appliance simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0.0",
  "mutagen>=1.47.0",
]

[tool.setuptools]
packages = ["app", "app.playback", "app.display", "app.input", "app.services", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
